<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/button_home" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/box_lastgps"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_lastgps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp" />

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/box_checkin"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_checkin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp" />

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/box_checkout"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_checkout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp" />

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_notifications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="@string/switch_tracking" />

                <Switch
                    android:id="@+id/switch_tracking"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/box_gpslog"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_gpslog"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:typeface="monospace" />

                        </LinearLayout>
                    </ScrollView>
                </HorizontalScrollView>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>